@@ -174,6 +174,6 @@ int main()
 	}
 #endif
 
-	return ret;
+	return ret ? 333 : 0;
 }
 
